Polished the domain integration checking page

--- a/code/dev/parts/domains/domain-check-integration-page.html
+++ b/code/dev/parts/domains/domain-check-integration-page.html
@@ -1,7 +1,7 @@
 <div class="row">
   <div class="col-sm-12">
     <h2 class="pull-left page-title">
-      Check Integration Domain <strong ng-if="model.domain_name">{{model.domain_name}}</strong>
+      Integration Check For Domain <strong ng-if="model.domain_name">{{model.domain_name}}</strong>
     </h2>
   </div>
 </div>
