Usage Repord, Domains Usage UI tests updated

--- a/code/dev/parts/reports/usage-web.html
+++ b/code/dev/parts/reports/usage-web.html
@@ -272,7 +272,7 @@
 
           <div ng-if="showTraffic()">
 
-            <div ng-if="showDomainsUsage()">
+            <div ng-if="showDomainsUsage()" id="domains_usage">
 
               <hr>
               <h4>Traffic Total Per Billing Zone</h4>
