Add new page 'Check Integration DNS Zone' and directives

--- a/code/dev/index.html
+++ b/code/dev/index.html
@@ -430,8 +430,11 @@ ga('create',  window.gaAccount, 'auto');
 <!-- DNS Zones -->
 <script type="text/javascript" src="js/portal/dns_zones/dns_zones.module.js"></script>
 <script type="text/javascript" src="js/portal/dns_zones/dns_zones.routes.js"></script>
+<script type="text/javascript" src="js/portal/dns_zones/controller/dns_zoneCheckIntegrationPage.controller.js"></script>
 <script type="text/javascript" src="js/portal/dns_zones/controller/dns_zonesCrud.controller.js"></script>
- <!-- //DNS Zones -->
+<script type="text/javascript" src="js/portal/dns_zones/dns-zone-check-integration/dnsZoneCheckIntegration.directive.js"></script>
+<script type="text/javascript" src="js/portal/dns_zones/dns-zone-check-integration/dnsZoneCheckIntegrationPanel.directive.js"></script>
+<!-- //DNS Zones -->
 <script type="text/javascript" src="js/portal/app.module.js"></script>
 <script type="text/javascript" src="js/portal/app.config.js"></script>
 <script type="text/javascript" src="js/portal/app.routes.js"></script>
