--- a/code/dev/parts/dns_zones/dns_zone-check-integration-page.html
+++ b/code/dev/parts/dns_zones/dns_zone-check-integration-page.html
@@ -1,7 +1,7 @@
 <div class="row">
   <div class="col-sm-12">
     <h2 class="pull-left page-title">
-      Check Integration DNS Zone <strong ng-if="model.zone">{{model.zone}}</strong>
+      Integration Check For DNS Zone <strong ng-if="model.zone">{{model.zone}}</strong>
     </h2>
   </div>
 </div>
