Add 'Download SDK' button for iOS Apps

--- a/code/dev/index.html
+++ b/code/dev/index.html
@@ -150,6 +150,7 @@ ga('create',  window.gaAccount, 'auto');
 <!-- build:js scripts/compiled.js -->
 <script type="text/javascript" src="js/portal/config/config.module.js"></script>
 <script type="text/javascript" src="js/portal/config/config.constants.js"></script>
+<script type="text/javascript" src="js/portal/config/config.values.js"></script>
 <script type="text/javascript" src="js/portal/config/activity/activityPhrase.constants.js"></script>
 
 <script type="text/javascript" src="js/portal/shared/shared.module.js"></script>
