--- a/code/dev/parts/apps/configure.html
+++ b/code/dev/parts/apps/configure.html
@@ -11,13 +11,23 @@
       <div class="panel-heading">
         <div class="row">
           <div class="col-md-12">
-            <div class="pull-left">
-              <a ui-sref="^" ng-disabled="_loading" class="btn btn-default">
-                <i class="glyphicon glyphicon-arrow-left"></i>&nbsp; Back To List
-              </a>
-              <a ui-sref="^.edit({id: model.id})" ng-disabled="_loading" class="btn btn-info">
-                <i class="glyphicon glyphicon-pencil"></i>&nbsp; Basic Mode
-              </a>
+            <div class="pull-left form-inline">
+              <div class="form-group">
+                <a ui-sref="^" ng-disabled="_loading" class="btn btn-default">
+                  <i class="glyphicon glyphicon-arrow-left"></i>&nbsp; Back To List
+                </a>
+                <a ui-sref="^.edit({id: model.id})" ng-disabled="_loading" class="btn btn-info">
+                  <i class="glyphicon glyphicon-pencil"></i>&nbsp; Basic Mode
+                </a>
+              </div>
+              <div class="form-group hidden-xs " ng-if="$state.current.data.platform_code=='iOS' ">
+                <div class="col-xs-12 "></div>
+              </div>
+              <div class="form-group " ng-if="$state.current.data.platform_code=='iOS' ">
+                <a download="RevSDK.framework.zip " href="{{downloadLinks[$state.current.data.platform_code]}} " class="btn btn-download btn-success " ng-disabled="_loading " uib-tooltip="Click to load the latest version of RevAPM mobile SDK ">
+                  <i class="glyphicon glyphicon-cloud-download "></i>&nbsp; Download SDK
+                </a>
+              </div>
             </div>
           </div>
         </div>
