--- a/code/dev/parts/apps/list.html
+++ b/code/dev/parts/apps/list.html
@@ -51,10 +51,20 @@
         <div class="panel-heading">
           <div class="row">
             <div class="col-md-12">
-              <div class="pull-left">
-                <a ui-sref=".new" class="btn btn-success" ng-disabled="_loading">
-                  <i class="glyphicon glyphicon-plus"></i>&nbsp; Add New App
-                </a>
+              <div class="pull-left form-inline">
+                <div class="form-group">
+                  <a ui-sref=".new" class="btn btn-success" ng-disabled="_loading">
+                    <i class="glyphicon glyphicon-plus"></i>&nbsp; Add New App
+                  </a>
+                </div>
+                <div class="form-group hidden-xs  " ng-if="$state.current.data.platform_code == 'iOS'">
+                  <div class="col-xs-12"></div>
+                </div>
+                <div class="form-group" ng-if="$state.current.data.platform_code == 'iOS'">
+                  <a download="RevSDK.framework.zip" href="{{downloadLinks[$state.current.data.platform_code]}}" class="btn btn-download btn-success" ng-disabled="_loading" uib-tooltip="Click to load the latest version of RevAPM mobile SDK">
+                    <i class="glyphicon glyphicon-cloud-download"></i>&nbsp; Download SDK
+                  </a>
+                </div>
               </div>
               <div class="pull-right">
                 <form class="form-inline">
