Polished the Download SDK button and new static caching rule button

--- a/code/dev/parts/apps/new.html
+++ b/code/dev/parts/apps/new.html
@@ -21,7 +21,7 @@
                 <div class="col-xs-12 "></div>
               </div>
               <div class="form-group " ng-if="$state.current.data.platform_code=='iOS' ">
-                <a download="RevSDK.framework.zip " href="{{downloadLinks[$state.current.data.platform_code]}} " class="btn btn-download btn-success " ng-disabled="_loading " uib-tooltip="Click to load the latest version of RevAPM mobile SDK ">
+                <a download="RevSDK.framework.zip " href="{{downloadLinks[$state.current.data.platform_code]}} " class="btn btn-download btn-success " ng-disabled="_loading " uib-tooltip="Click to download the latest version of RevAPM mobile SDK">
                   <i class="glyphicon glyphicon-cloud-download "></i>&nbsp; Download SDK
                 </a>
               </div>
