Add new Page SSO Authentication

--- a/code/dev/index.html
+++ b/code/dev/index.html
@@ -221,6 +221,7 @@ ga('create',  window.gaAccount, 'auto');
 <script type="text/javascript" src="js/portal/auth/services/user.service.js"></script>
 <script type="text/javascript" src="js/portal/auth/menu/selectAccountDomain.directive.js"></script>
 <script type="text/javascript" src="js/portal/auth/2fa/disableTwoFactorAuth.directive.js"></script>
+<script type="text/javascript" src="js/portal/auth/azure-sso/azureSSO.controller.js"></script>
 <script type="text/javascript" src="js/portal/auth/login/passwordRestore.controller.js"></script>
 <script type="text/javascript" src="js/portal/auth/login/resendRegistrationEmail.controller.js"></script>
 <script type="text/javascript" src="js/portal/auth/login/forgotpass.controller.js"></script>
