--- a/code/dev/index.html
+++ b/code/dev/index.html
@@ -212,6 +212,8 @@ ga('create',  window.gaAccount, 'auto');
 <script type="text/javascript" src="js/portal/resources/model/sslNames.factory.js"></script>
 <script type="text/javascript" src="js/portal/resources/model/stagingServers.factory.js"></script>
 <script type="text/javascript" src="js/portal/resources/model/apps.factory.js"></script>
+<script type="text/javascript" src="js/portal/resources/model/azureResources.factory.js"></script>
+<script type="text/javascript" src="js/portal/resources/model/azureSubscriptions.factory.js"></script>
 
 <script type="text/javascript" src="js/portal/auth/auth.module.js"></script>
 <script type="text/javascript" src="js/portal/auth/auth.config.js"></script>
@@ -437,6 +439,16 @@ ga('create',  window.gaAccount, 'auto');
 <script type="text/javascript" src="js/portal/dns_zones/dns-zone-check-integration/dnsZoneCheckIntegration.directive.js"></script>
 <script type="text/javascript" src="js/portal/dns_zones/dns-zone-check-integration/dnsZoneCheckIntegrationPanel.directive.js"></script>
 <!-- //DNS Zones -->
+<!-- Azure Marcetplace-->
+<script type="text/javascript" src="js/portal/azure-resources/azureResources.module.js"></script>
+<script type="text/javascript" src="js/portal/azure-resources/azureResources.routes.js"></script>
+<script type="text/javascript" src="js/portal/azure-resources/controller/azureResources.controller.js"></script>
+
+
+<script type="text/javascript" src="js/portal/azure-subscriptions/azureSubscriptions.module.js"></script>
+<script type="text/javascript" src="js/portal/azure-subscriptions/azureSubscriptions.routes.js"></script>
+<script type="text/javascript" src="js/portal/azure-subscriptions/controller/azureSubscriptions.controller.js"></script>
+<!-- //Azure Marcetplace-->
 <script type="text/javascript" src="js/portal/app.module.js"></script>
 <script type="text/javascript" src="js/portal/app.config.js"></script>
 <script type="text/javascript" src="js/portal/app.routes.js"></script>
