--- a/code/dev/parts/layout.html
+++ b/code/dev/parts/layout.html
@@ -177,10 +177,10 @@
         Billing
         <i ng-click="expandMenu('index.billing', $event)" class="pull-right {{ menuExpanded('index.billing') ? 'fa fa-caret-down' : 'fa fa-caret-up' }}"></i>
       </a>
-      <a ui-sref-active="active" ui-sref="index.billing.usage" class="side-menu-sub-item" ng-if="userService.isRevadmin()">
+      <a ui-sref-active="active" ui-sref="index.billing.usage" class="side-menu-sub-item" ng-if="userService.isUser()">
         <i class="sub-menu-icon fa fa-balance-scale"></i> Usage Report
       </a>
-      <a ui-sref-active="active" ui-sref="index.billing.company" class="side-menu-sub-item" ng-if="userService.isRevadmin()">
+      <a ui-sref-active="active" ui-sref="index.billing.company" class="side-menu-sub-item" ng-if="userService.isAdmin()">
         <i class="sub-menu-icon fa fa-gear"></i> Account Profile
       </a>
       <a ui-sref-active="active" ui-sref="index.billing.plans" class="side-menu-sub-item" ng-if="(userService.isAdmin() && userService.hasBillingPlan()) || userService.isReseller() || userService.isRevadmin()">
