--- a/code/dev/parts/layout.html
+++ b/code/dev/parts/layout.html
@@ -165,6 +165,9 @@
       <a ui-sref-active="active" ui-sref="index.azureMarketplace.subscriptions" class="side-menu-sub-item" ng-if="!userService.isUser()">
         <i class="sub-menu-icon fa fa-users"></i> Subscriptions
       </a>
+      <a ui-sref-active="active" ui-sref="index.azureMarketplace.subscription_resources" class="side-menu-sub-item" ng-if="!userService.isUser()">
+        <i class="sub-menu-icon fa fa-users"></i> Resources Per Subscription
+      </a>
       <a ui-sref-active="active" ui-sref="index.azureMarketplace.resources" class="side-menu-sub-item" ng-if="!userService.isUser()">
         <i class="sub-menu-icon fa fa-users"></i> Resources
       </a>
