--- a/code/dev/parts/azure-resources/list.html
+++ b/code/dev/parts/azure-resources/list.html
@@ -1,8 +1,22 @@
+<!-- Note that element contain ui-view child page will be added here -->
+<script type="text/ng-template" id="viewModal.html">
+  <div class="modal-header">
+    <h3 class="modal-title">View Resource {{model.resource_name}}</h3>
+  </div>
+  <div class="modal-body">
+    <pre>{{model | json}}</pre>
+  </div>
+  <div class="modal-footer">
+    <button class="btn btn-warning" type="button" ng-click="cancel()">Cancel</button>
+    <button class="btn btn-danger" type="button" ng-click="ok()">OK</button>
+  </div>
+</script>
+
 <div class="container-fluid" ui-view="page">
   <div class="row">
     <div class="col-sm-12">
       <h2 class="pull-left page-title">
-               Resources List
+              Resources
             </h2>
     </div>
   </div>
@@ -18,16 +32,7 @@
                 </a>
               </div>
               <div class="pull-left">
-                <form class="form-inline">
-                  <div class="form-group">
-                    <ui-select ng-model="subscriptionId" theme="select2" ng-animate-disabled ng-disabled="" on-select="onSubscriptionSelect($model)" style="min-width: 300px;">
-                      <ui-select-match placeholder="Select Subscription">{{$select.selected.subscription_id}}</ui-select-match>
-                      <ui-select-choices repeat="item.subscription_id as item in subscriptionsList | filter: {id: $select.search}">
-                        <div ng-bind-html="item.subscription_id|highlight: $select.search"></div>
-                      </ui-select-choices>
-                    </ui-select>
-                  </div>
-                </form>
+
               </div>
             </div>
           </div>
@@ -41,47 +46,73 @@
             </div>
           </div>
         </div> -->
+
         <div class="panel-body">
+          <div class="alert alert-info" ng-if="records.length == 0 && !_loading">
+            Currently you don't have any Azure Resources registered in the system.
+          </div>
+          <div class="alert alert-warning" ng-if="records == null && !_loading">
+            Failed to retrieve a list of resources - please try again later
+          </div>
           <div class="alert alert-info" ng-if="_loading">
             <i class="glyphicon glyphicon-refresh spin" ng-if="item.loading"></i>&nbsp; Loading...
           </div>
-          <div class="alert alert-danger" ng-if="!_loading && _error">
-            {{_error.message}}
-          </div>
-          <table datatable="ng" dt-options="subscriptionResourcesDtOptions" dt-instance="dtInstanceTransactions" class="table order-column table-striped" ng-if="!_loading && !_error">
+          <crud-pagination></crud-pagination>
+          <table class="table">
             <thead>
               <tr>
                 <th>
-                  <p>Name</p>
+                  <a href="" ng-click="order('resource_name')">Resource Name</a>
+                  <span class="sortorder" ng-show="filter.predicate === 'resource_name'" ng-class="{reverse: filter.reverse}"></span>
                 </th>
                 <th>
-                  <p>Type</p>
+                  <a href="" ng-click="order('subscription_id')"> Subscription ID</a>
+                  <span class="sortorder" ng-show="filter.predicate === 'subscription_id'" ng-class="{reverse: filter.reverse}"></span>
                 </th>
+
+                <th><a href="" ng-click="order('original_object.type')">Type</a>
+                  <span class="sortorder" ng-show="filter.predicate === 'original_object.type'" ng-class="{reverse: filter.reverse}"></span></th>
+
                 <th>
-                  <p>Location</p>
+                  <a href="" ng-click="order('location')">Location</a>
+                  <span class="sortorder" ng-show="filter.predicate === 'location'" ng-class="{reverse: filter.reverse}"></span>
                 </th>
+                <th> <a href="" ng-click="order('original_object.plan.name')">Plan</a>
+                  <span class="sortorder" ng-show="filter.predicate === 'original_object.plan.name'" ng-class="{reverse: filter.reverse}"></span></th>
                 <th>
-                  <p>Plan</p>
-                </th>
-                <th>
-                  <p>Resource Group</p>
-                </th>
-                <!--    <th>
-                  <p>Actions</p>
-                </th> -->
+                  <a href="" ng-click="order('resource_group_name')">Resource Group</a>
+                  <span class="sortorder" ng-show="filter.predicate === 'resource_group_name'" ng-class="{reverse: filter.reverse}"></span>
+              </th>
+            <th>Actions</th>
+
               </tr>
             </thead>
             <tbody>
-              <tr ng-repeat="item in subresources">
-                <td>{{item.name}}</td>
-                <td>{{item.type}}</td>
-                <td>{{item.location}}</td>
-                <td>{{item.plan.name}}</td>
-                <td>{{item.plan.name}}</td>
-                <!-- <td><a>Delete</a></td> -->
+              <tr id="anchor{{::$index}}" ng-click="saveAnchorScrollIndex($index)" ng-repeat="item in filteredRecords | limitTo:filter.limit:filter.skip track by $index">
+                <td>
+                  {{item.resource_name}}
+                </td>
+                <td>{{item.subscription_id}}</td>
+                <td>
+                   {{item.original_object.type}}
+                </td>
+                <td>{{item.original_object.location}} </td>
+                <td>{{item.original_object.plan.name}}</td>
+
+                <td >
+                  <div>{{item.resource_group_name}}</div>
+                </td>
+                <td class="actions">
+                  <i class="glyphicon glyphicon-refresh spin" ng-if="item.loading"></i>
+                  <a  ng-click="onViewResource($event,item)" ng-if="!item.loading" uib-tooltip="View">
+                    <i class="fa fa-eye"></i>
+                  </a>
+                </td>
               </tr>
             </tbody>
           </table>
+          <hr>
+          <crud-pagination></crud-pagination>
         </div>
       </div>
     </div>
