Show 'Introduction Video' in modal window

--- a/code/dev/index.html
+++ b/code/dev/index.html
@@ -58,7 +58,7 @@
     }
   };
 </script>-->
-
+<script src="https://www.youtube.com/iframe_api"></script>
 <!-- build:js scripts/vendor.js -->
 <script src="js/zendesk/zendesk.js"></script>
 <!--<script type="text/javascript" src="bower_components/PACE/pace.js"></script>-->
@@ -93,6 +93,7 @@
 <script type="text/javascript" src="bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
 
 <script type="text/javascript" src="bower_components/angular-intro.js/build/angular-intro.min.js"></script>
+<script type="text/javascript" src="bower_components/angular-youtube-mb/dist/angular-youtube-embed.min.js"></script>
 <script type="text/javascript" src='bower_components/Sortable/Sortable.min.js'></script>
 <script type="text/javascript" src='bower_components/Sortable/ng-sortable.js'></script>
 <!-- <script type="text/javascript" src='bower_components/angular-dashboard-framework/dist/angular-dashboard-framework.min.js'></script> -->
