--- a/code/dev/parts/apps/list.html
+++ b/code/dev/parts/apps/list.html
@@ -37,6 +37,18 @@
     <button class="btn btn-success" type="button" ng-click="ok()">OK</button>
   </div>
 </script>
+<script type="text/ng-template" id="videoModal.html">
+  <div class="modal-header">
+    <h3 class="modal-title">Video</h3>
+  </div>
+  <div class="modal-body">
+    <youtube-video style="width: 100%; min-height: 20vh;" video-id="model.youtubeId"></youtube-video>
+  </div>
+  <div class="modal-footer">
+    <button class="btn btn-warning" type="button" ng-click="cancel()">Close</button>
+    <!-- <button class="btn btn-success" type="button" ng-click="ok()">Ok</button> -->
+  </div>
+</script>
 <div class="container-fluid" ui-view="page">
   <div class="row">
     <div class="col-sm-12">
@@ -69,7 +81,7 @@
                   <div class="col-xs-12"></div>
                 </div>
                 <div class="form-group" ng-if="$state.current.data.platform_code == 'iOS'">
-                  <a href="{{introductionVideoLinks[$state.current.data.platform_code]}}" class="btn btn-download btn-success" ng-disabled="_loading" uib-tooltip="Click to view Introduction Video" target="_blank">
+                  <a __href="{{introductionVideoLinks[$state.current.data.platform_code]}}" class="btn btn-download btn-success" ng-disabled="_loading" uib-tooltip="Click to view Introduction Video" __target="_blank" ng-click="onShowVideo($event, {youtubeId:introductionVideoYoutubeIDs[$state.current.data.platform_code]})">
                     <i class="fa fa-youtube"></i>&nbsp; Introduction Video
                   </a>
                 </div>
