--- a/code/dev/parts/layout.html
+++ b/code/dev/parts/layout.html
@@ -1,4 +1,4 @@
-<section drawer ng-intro-options="IntroOptions" ng-intro-method="introOpen"  ng-intro-oncomplete="onIntroCompletedEvent" ng-intro-onexit="ExitEvent" ng-intro-onchange="ChangeEvent" ng-intro-onbeforechange="BeforeChangeEvent" ng-intro-onafterchange="AfterChangeEvent" ng-hide="isHide">
+<section drawer ng-intro-options="IntroOptions" ng-intro-method="introOpen"  ng-intro-oncomplete="onIntroCompletedEvent" ng-intro-onexit="onIntroSkipEvent" ng-intro-onchange="ChangeEvent" ng-intro-onbeforechange="BeforeChangeEvent" ng-intro-onafterchange="AfterChangeEvent" ng-hide="isHide">
   <a href="https://www.revapm.com/" id="logo" target="_blank">
     <img src="images/logo_color.png" alt="Logo" />
   </a>
